<resources>
    <string name="app_name">FitGuru</string>
    <string name="personal_data">Personal</string>
    <string name="training_plan">Training</string>
    <string name="health">Health</string>
    <string name="newUser">Please enter your credentials.</string>
    <string name="welcome">Welcome new user!</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight (kg)</string>
    <string name="body_fat_mass">Body Fat Mass</string>
    <string name="bmi">BMI</string>
    <string name="optimal_weight">Optimal Weight</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>
    <string name="height">Height (cm)</string>
    <string name="Save">Save</string>
    <string name="cont">Continue</string>
    <string name="done">Done</string>
    <string name="new_exercise">New exercise</string>
    <string name="ok">OK</string>
    <string name="category">Category</string>
    <string name="repeat">Repeat</string>
    <string name="resting">Resting (sec)</string>
    <string name="cancel">Cancel</string>
    <string name="personal">Personal</string>
    <string name="training">Training</string>
    <string name="food">Healthy diet</string>
    <string name="health_tipps">Health tipps</string>
    <string name="chech_diet">Swipe right to check diet</string>
    <string name="network_error">OFFLINE</string>
    <string name="total_intake">Total intake</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="calories">Calories</string>
    <string name="sugar">Sugar</string>
    <string name="add_to_current_summary_or_cancel">Add to current summary or cancel</string>
    <string name="clear">Clear</string>
    <string name="swipe_right_to_see_diagrams">Swipe right to see diagrams</string>
    <string name="what_did_you_eat">What did you eat?</string>
    <string name="enter_here">Enter here</string>
    <string name="save">Save</string>
    <string name="max_sugar">Max sugar (g)</string>
    <string name="max_calories">Max calories</string>
    <string name="max_carbohydrates">Max carbohydrates (g)</string>
    <string name="max_fat">Max fat (g)</string>
    <string name="swipe_right_to_settings">Swipe right to settings</string>
    <string name="target_weight">Target\nweight</string>
    <string name="intakes">Intakes</string>


    <string-array name="category_items">
        <item>Warmup</item>
        <item>Exercise</item>
        <item>Stretch</item>
    </string-array>

</resources>