<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical"
    android:weightSum="7"
    android:background="@drawable/bg2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#2C2B2B"
        android:src="@drawable/banner2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="59dp" />

    <Button
    android:id="@+id/btPersonal"
    android:layout_width="300dp"
    android:layout_height="80dp"
    android:layout_marginTop="30dp"
    android:backgroundTint="#FF5722"
    android:text="@string/personal"
        android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btTraining"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#EADA51"
        android:text="@string/training"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPersonal" />

    <Button
        android:id="@+id/btFood"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#88EC15"
        android:text="@string/food"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btTraining" />

    <Button
        android:id="@+id/btTips"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        android:text="@string/health_tipps"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btFood" />


</androidx.constraintlayout.widget.ConstraintLayout>