<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tvmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_intake"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<LinearLayout
    android:id="@+id/sL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/tvmain"
    android:weightSum="2"
    android:paddingHorizontal="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lCal"
    app:layout_constraintTop_toBottomOf="@+id/sL"
    android:paddingHorizontal="30dp"
    android:background="@color/white"
    android:weightSum="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/calories"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        android:gravity="end"
        android:textSize="20sp"
        android:layout_weight="1"
        />

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lCarbo"
        app:layout_constraintTop_toBottomOf="@+id/lCal"
        android:paddingHorizontal="30dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/etCarbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrates"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvCarbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10"
            android:gravity="end"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lFat"
        app:layout_constraintTop_toBottomOf="@+id/lCarbo"
        android:paddingHorizontal="30dp"
        android:weightSum="2"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fat"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10"
            android:gravity="end"
            android:textSize="20sp"
            android:layout_weight="1"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_to_current_summary_or_cancel"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lFat"
        android:textColor="@color/white"
        android:paddingVertical="20dp"
        android:layout_marginBottom="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>