<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient2">


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/gradient2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#AB353535"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sample Name" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/bmi"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tvBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="60sp"
                tools:text="120"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FF4D14"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/body_fat_mass"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvBfm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="60sp"
                tools:text="120"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#FF4D14"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/optimal_weight"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvOw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="60sp"
                tools:text="120"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/body_fat_percentage"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvBfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="60sp"
                tools:text="120"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/weight_progress"
        style="@style/CircularDeterminateProgressBarSimple"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:progress="60" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_weight"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/weight_progress"
        app:layout_constraintEnd_toEndOf="@+id/weight_progress"
        app:layout_constraintStart_toStartOf="@+id/weight_progress"
        app:layout_constraintTop_toTopOf="@+id/weight_progress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/swipe_right_to_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>